--- a/geometry_v4.tex
+++ b/geometry_v4.tex
@@ -53,7 +53,7 @@ a narrow gap in between the TS and OPA.
 
 The distribution of $E_\gamma = P(e^+) + P(e^-)$ for the events with the reconstructed
 $e^+$ and $e^-$ tracks is shown in Figure~\ref{figure:t2_0_smom_1}.
-Overlaid is the fit of the distribution with the SU2020 function \cite{SU2020}.
+Overlaid is the fit of the distribution with the SU2020 function \cite{MU2E_SU2020_PAPER}.
 The $\chi^2/DOF$ of the fit is close to one, and with about 1000 events in the peak,
 an uncertainty on the peak position returned by the fitter is below 10 keV/c.
 This is a good indication that statistics of 1000 events should be sufficient
