--- a/mu2e-50071.tex
+++ b/mu2e-50071.tex
@@ -205,10 +205,11 @@ with the following interactions proceeding via two main channels:
 $\pi^- p \to n\pi^0$ and $\pi^- p \to n \gamma$.
 
 The second channel has a branching ratio close to 40\% and as both initial state particles
-are at rest, the outgoing photons are monochromatic with the energy E=129.4 MeV~\cite{something_on_RPC}.
+are at rest, the outgoing photons are monochromatic
+with the energy E=129.4 MeV~\cite{RPC_1972_Bistirlich_PhysRevC.5.1867}.
 
 The 129.4 MeV peak from $\pi^- p \to n \gamma$ is also clearly visible on hydrogen-containing
-compounds, for example, polyethylene \cite{}.
+compounds, for example, polyethylene \cite{RPC_1972_Bistirlich_PhysRevC.5.1867}.
 
 Using such a compound as a material for the Mu2e pion degrader disk may allow to calibrate
 the Mu2e momentum scale at B = 1 T.
@@ -276,7 +277,7 @@ intensity is about one day.
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \newpage
 \bibliographystyle{unsrtnat}
-\bibliography{clfv,mu2e_internal_notes,mu2e_piplusenu_notes,radiative_pion_capture}
+\bibliography{clfv,mu2e_internal_notes,mu2e_piplusenu_notes,mu2e_publications,radiative_pion_capture}
 
 % \include{appendix_a}
 \include{appendix_b}
