--- a/track_reconstruction_status.tex
+++ b/track_reconstruction_status.tex
@@ -26,7 +26,7 @@ No track selection cuts are applied. A $\gamma \to e^+e^-$ peak  is clearly seen
 \end{figure}
 
 Figure~\ref{figure:pipenu_bpip4b0s54r0100_murat_drpc_ana_t2_1_smom_1_fit} shows the fit
-of the conversion peak with the SU2020 resolution function.
+of the conversion peak with the SU2020 resolution function \cite{MU2E_SU2020_PAPER}.
 The offset of the reconstructed peak due to the energy losses is 1 MeV, and the FWHM
 of the distribution is also close to 1 MeV.
 
