--- a/track_reconstruction.tex
+++ b/track_reconstruction.tex
@@ -1,9 +1,10 @@
 %
 \section{Track reconstruction}
+\label{section:track_reconstruction}
 
 Running TrkPatRec+CalPatRec p057 track reconstruction and selecting events
 with two reconstructed tracks yields the distribution of $E_\gamma$
-shown in Figure~\ref{figure:pipenu_bpip4b0s54r0100_murat_drpc_ana_t2_1_smom_0}
+shown in Figure~\ref{figure:00084_rpc04b0s54_t2_1_smom_0}
 No track selection cuts are applied. A $\gamma \to e^+e^-$ peak  is clearly seen just below
 130 MeV/c..
 
@@ -12,28 +13,21 @@ No track selection cuts are applied. A $\gamma \to e^+e^-$ peak  is clearly seen
     \node[anchor=south west,inner sep=0] at (0,0.) {
       % \node[shift={(0 cm,0.cm)},inner sep=0,rotate={90}] at (0,0) {}
       \makebox[\textwidth][c] {
-        \includegraphics[width=0.95\textwidth]{png/pipenu_bpip4b0s54r0100_murat_drpc_ana_t2_1_smom_0}
+        \includegraphics[width=0.95\textwidth]{pdf/figure_00084}
       }
     };
     % \node [text width=8cm, scale=1.0] at (14.5,0.5) {$\mu_B$, expected background mean};
     % \node [text width=8cm, scale=1.0, rotate={90}] at (1.5,7.5) { $S_{D}$, ``discovery'' signal strength  };
   \end{tikzpicture}
   \caption{
-    \label{figure:pipenu_bpip4b0s54r0100_murat_drpc_ana_t2_1_smom_0}
+    \label{figure:00084_rpc04b0s54_t2_1_smom_0}
     Sum of the two reconstructed track momenta
   }
-  \label{figure:event_display}
 \end{figure}
 
-Figure~\ref{figure:pipenu_bpip4b0s54r0100_murat_drpc_ana_t2_1_smom_1_fit} shows the fit
-of the conversion peak with the SU2020 resolution function \cite{MU2E_SU2020_PAPER}.
-The offset of the reconstructed peak due to the energy losses is 1 MeV, and the FWHM
-of the distribution is also close to 1 MeV.
-
-Comparison of Figure ~\ref{figure:pipenu_bpip4b0s54r0100_murat_drpc_ana_t2_1_smom_0} 
-to Figure ~\ref{figure:pipenu_bpip4b0_murat_track_ana_trk_0_p_fit}
-gives an estimate of the reconstruction efficiency for preselected events of about 10\%,
-which is rather low.
+Comparison of Figure ~\ref{figure:00084_rpc04b0s54_t2_1_smom_0} 
+to Figure ~\ref{figure:00083} gives an estimate of the reconstruction efficiency
+for preselected events of about 10\%, which is not very high.
 %
 However the Mu2e track reconstruction, first of all - the pattern recognition,
 has never been tuned for low momentum tracks. An example of a $\gamma \to e^+e^-$
@@ -55,13 +49,12 @@ and  the positron track has not been found.
     % \node [text width=8cm, scale=1.0, rotate={90}] at (1.5,7.5) { $S_{D}$, ``discovery'' signal strength  };
   \end{tikzpicture}
   \caption{
-    \label{figure:sum_mom_vd13}
+    \label{figure:event_display}
     An example of a 129.4 MeV photon conversion event with two tracks
     in the tracker fiducial and only one track (red circle of a smaller radius)
     reconstructed. Shown are the XY and $\phi$-Z event views in the tracker.
     {\red check if some of the positron hits been lost to the delta-electron removal}
   }
-  \label{figure:event_display}
 \end{figure}
 
 A second type of misreconstruction occurs when hits from both particles are combined to make an unrealistic track with larger radius than either true track. These can occur in place of reconstruction for an individual particle, or in addition to well-reconstructed tracks. Figure~\ref{figure:he_artifact_evts} shows two examples. Taking the sum of momenta for cases with one or more of these combined tracks can significantly overestimate the true total momentum, and results in high energy artifacts out beyond the original RPC photon energy. As part of track reconstruction improvements, better separation of hits between the two tracks will be needed to recover some of these events. 
@@ -77,13 +70,15 @@ A second type of misreconstruction occurs when hits from both particles are comb
   \end{tikzpicture}
   \caption{
     \label{figure:he_artifact_evts}
-   Tracker XY view for two example events where the existing reconstruction combines hits from both electron and positron to make tracks with unrealistic large transverse momentum. Circles include all reconstructed tracks for these events, both artifacts and well-reconstructed tracks (no MC truth tracks are shown here). 
+    Tracker XY view for two example events where the existing
+    reconstruction combines hits from both electron and positron to
+    make tracks with unrealistic large transverse momentum. Circles
+    include all reconstructed tracks for these events, both artifacts
+    and well-reconstructed tracks (no MC truth tracks are shown here).
   }
-  \label{figure:he_artifact_evts}
 \end{figure}
 
-
-Figure~\ref{figure:pipenu_bpip4b0s54r0100_murat_drpc_ana_t2_1_smom_1_fit} shows the fit of the
+Figure~\ref{figure:00085_t2_1_smom_1_fit} shows the fit of the
 reconstructed $\pi^- p \to n \gamma$ peak with the SU2020 resolution function.
 The peak has its maximum at 128.4 MeV, about 200 keV below the fit to the MC truth,
 and its width is about 1 MeV FWHM. 
@@ -93,17 +88,16 @@ and its width is about 1 MeV FWHM.
     \node[anchor=south west,inner sep=0] at (0,0.) {
       % \node[shift={(0 cm,0.cm)},inner sep=0,rotate={90}] at (0,0) {}
       \makebox[\textwidth][c] {
-        \includegraphics[width=0.95\textwidth]{png/pipenu_bpip4b0s54r0100_murat_drpc_ana_t2_1_smom_1_fit}
+        \includegraphics[width=0.95\textwidth]{pdf/figure_00085}
       }
     };
     % \node [text width=8cm, scale=1.0] at (14.5,0.5) {$\mu_B$, expected background mean};
     % \node [text width=8cm, scale=1.0, rotate={90}] at (1.5,7.5) { $S_{D}$, ``discovery'' signal strength  };
   \end{tikzpicture}
   \caption{
-    \label{figure:pipenu_bpip4b0s54r0100_murat_drpc_ana_t2_1_smom_1_fit}
+    \label{figure:00085_t2_1_smom_1_fit}
     fit of the $\pi^- p \to n \gamma$ peak with the SU2020 resolution function
-    in the range [120,135] MeV \\
-    \hlite{make fit errors visible}
+    in the range [120,135] MeV
   }
 \end{figure}
 
